[gd_scene load_steps=19 format=3 uid="uid://b16a6hs18s60g"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_5sh3o"]
[ext_resource type="PackedScene" uid="uid://ccfpm0lht1k61" path="res://Assets/Player/playerGeometry.tscn" id="1_ne6uo"]
[ext_resource type="Script" path="res://Scripts/Side.gd" id="3_ex162"]
[ext_resource type="PackedScene" uid="uid://bx2by673cvqw4" path="res://UI/HUD.tscn" id="4_p8g3w"]
[ext_resource type="PackedScene" uid="uid://bl5cmauyfpdau" path="res://UI/Pause.tscn" id="5_hciq1"]
[ext_resource type="PackedScene" uid="uid://dhspmsstb08y2" path="res://UI/GameOver.tscn" id="6_g56hc"]
[ext_resource type="AudioStream" uid="uid://cp8ol5i1e3b5g" path="res://Assets/Audio/lowFrequency_explosion_001.ogg" id="7_4qjin"]
[ext_resource type="AudioStream" uid="uid://cpxugxa37ekmd" path="res://Assets/Audio/error_007.ogg" id="8_q0s0j"]
[ext_resource type="AudioStream" uid="uid://dxygkw2c8qapq" path="res://Assets/Audio/rollover5.ogg" id="9_l6uv2"]
[ext_resource type="AudioStream" uid="uid://3euroo31y02t" path="res://Assets/Audio/music.mp3" id="10_c1ws2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mf76v"]
height = 16.7195

[sub_resource type="BoxShape3D" id="BoxShape3D_bwcqs"]
size = Vector3(40.3775, 30.0966, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bykp2"]
size = Vector3(4.73009, 4.74209, 4.7541)

[sub_resource type="Environment" id="Environment_1f576"]
glow_enabled = true
adjustment_enabled = true
adjustment_saturation = 1.5

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_a73pi"]
dof_blur_far_enabled = true
dof_blur_far_distance = 234.11
dof_blur_far_transition = 694.94

[sub_resource type="SphereShape3D" id="SphereShape3D_3s6n0"]
radius = 4.01352

[sub_resource type="Animation" id="Animation_0xmj3"]
resource_name = "Shake"
length = 1.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 21.3229, 0.2, 1, 1.325, 1.325, 21.323, 0.3, 1, 1.5, 1.1, 21.323, 0.4, 1, 1.075, 1.075, 21.323, 0.5, 1, 1.125, 1.125, 21.323, 0.6, 1, -0.9, 1.1, 21.323, 0.7, 1, 1.075, -0.925, 21.323, 0.8, 1, -1.5, 1.5, 21.323, 0.9, 1, -1.4, 1, 21.323, 1, 1, -0.825, 1.175, 21.323, 1.1, 1, -0.85, -0.85, 21.323, 1.2, 1, 1.125, 1.125, 21.323, 1.3, 1, -0.9, -1.9, 21.323, 1.5, 1, 0, 0, 21.3229)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8wqm"]
_data = {
"Shake": SubResource("Animation_0xmj3")
}

[node name="Player" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_5sh3o")

[node name="Geometry" parent="." instance=ExtResource("1_ne6uo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Side1" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("3_ex162")
ColorValue = Color(1, 0, 0, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="Side2" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(2.98023e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, 2.98023e-08, -8.88178e-16, 0, 0, 0)
script = ExtResource("3_ex162")
Number = 2
ColorValue = Color(0, 1, 0, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="Side3" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(-1, -1.39091e-08, 1.02251e-15, 0, -4.37114e-08, -1, 1.39091e-08, -1, 4.37114e-08, 0, 0, 0)
script = ExtResource("3_ex162")
Number = 3
ColorValue = Color(1, 0, 0, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="Side4" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(5.76205e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, 5.76205e-08, -2.93319e-15, 0, 0, 0)
script = ExtResource("3_ex162")
Number = 4
ColorValue = Color(0, 1, 0, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="Side5" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(-2.51867e-15, -1.37314e-29, -1, -5.76205e-08, 1, 3.76076e-37, 1, 5.76205e-08, -2.93319e-15, 0, 0, 0)
script = ExtResource("3_ex162")
Number = 5
ColorValue = Color(0, 0, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="Side6" type="Area3D" parent="Geometry" groups=["side"]]
transform = Transform3D(-2.51867e-15, 8.74228e-08, 1, 5.76205e-08, -1, 8.74228e-08, 1, 5.76205e-08, -2.93319e-15, 0, 0, 0)
script = ExtResource("3_ex162")
Number = 6
ColorValue = Color(0, 0, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Side6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101771, 8.07248, -0.0048008)
shape = SubResource("CylinderShape3D_mf76v")

[node name="FaceArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.09799)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea"]
shape = SubResource("BoxShape3D_bwcqs")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_bykp2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 24.3228)
environment = SubResource("Environment_1f576")
attributes = SubResource("CameraAttributesPractical_a73pi")
fov = 37.8493

[node name="ContactArea" type="Area3D" parent="." groups=["player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ContactArea"]
shape = SubResource("SphereShape3D_3s6n0")

[node name="HitPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.98195)

[node name="HUD" parent="." instance=ExtResource("4_p8g3w")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CameraShake" type="AnimationPlayer" parent="."]
speed_scale = 5.0
libraries = {
"": SubResource("AnimationLibrary_l8wqm")
}

[node name="Pause" parent="." instance=ExtResource("5_hciq1")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("6_g56hc")]
visible = false

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4qjin")

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_q0s0j")

[node name="RollSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_l6uv2")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_c1ws2")
volume_db = -35.0
pitch_scale = 0.75
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
